# fastapi-blog

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.yaml
app/: auth.py  config.py  main.py  main_backup.py  models.py  pyproject.toml  schemas_backup.py
app/alembic/: env.py
app/alembic/versions/: 9fc1bfec1e94_initial_schema.py  d911f11d740f_added_likes_to_post.py
app/api/: router.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  lifespan.py  middlewares.py  security.py  storage.py
app/db/: __init__.py  dependencies.py  session.py
app/integrations/: email.py  s3.py
app/modules/: __init__.py
app/modules/auth/: __init__.py  api.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py  web.py
app/modules/posts/: __init__.py  api.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py  web.py
app/modules/users/: __init__.py  api.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py  web.py
app/seeds/: reset.py  reset_db.py  reset_storage.py  seed.py
app/seeds/data/: posts.json  users.json
app/static/js/: auth.js
app/templates/: account.html  error.html  forgot_password.html  home.html  layout.html  login.html  post.html  register.html  reset_password.html  user_posts.html
app/templates/mail/: password_reset.html
app/tests/: conftest.py  fixtures.py  utils.py
app/tests/integration/: test_auth_api.py  test_posts_api.py  test_users_api.py
app/web/: router.py
(+9 files in other folders)
