[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.138.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "djlint>=1.40.0",
    "poethepoet>=0.47.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 100
format_css = true
format_js = true
close_void_tags = true
blank_line_after_tag = "extends,load,include"
ignore = "H006,H031"

[tool.poe.tasks]
format-html = "djlint templates --reformat"
lint-html = "djlint templates --lint"
check-html = "djlint templates --check"
lint-python = "ruff check . --fix"
format-python = "ruff format ."
format = [
    "format-html",
    "format-python",
    "lint-python"
]
